--- a/assets/styles/scss/pages/_home-webshop.scss
+++ b/assets/styles/scss/pages/_home-webshop.scss
@@ -55,6 +55,7 @@
   background-size: cover;
 
   &__container {
+    height: 100%;
     justify-content: center;
     animation: linear-gradient 15s ease infinite;
     background: $linear-gradient--combo;
@@ -91,16 +92,14 @@
 
 .hot-items {
   &__container {
-    background-color: lavender;
   }
 
   &__title {
-    background-color: thistle;
   }
 
   .hot-item {
     padding: $whitespace--xs;
-    background-color: plum;
+    // background-color: plum;
 
     &__title {
       background-color: orchid;
@@ -141,18 +140,13 @@
   &__container {
     position: relative;
     display: flex;
-    align-items: center;
-    justify-content: center;
     width: 375px;
     height: 667px;
-    border-radius: 10px;
-    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-    transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
-    overflow: hidden;
-    &:hover {
-      box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25),
-        0 10px 10px rgba(0, 0, 0, 0.22);
+    align-items: center;
+    justify-content: center;
+    background-color: lavender;
 
+    &:hover {
       .hot-item {
         &__visual {
           transform: scale(1.25);
@@ -169,8 +163,9 @@
     position: absolute;
     top: 50px;
     left: 20px;
-    margin: 0;
     padding: 0;
+    margin: 0;
+    background-color: thistle;
     color: white;
     font-size: 60px;
     font-weight: 100;
@@ -187,17 +182,18 @@
     bottom: -33%;
     left: 0;
     width: 100%;
-    margin: 0;
     padding: 30px;
+    margin: 0;
     background-color: rgba(black, 0.85);
     box-shadow: 0 0 20px rgba(black, 0.4);
     color: white;
     line-height: 1;
     transition: 0.25s;
   }
+
   &__caption-title {
-    margin: 0 0 20px;
     padding: 0;
+    margin: 0 0 20px;
   }
 
   &__caption-text {
@@ -210,10 +206,10 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    margin: 10px 0 0;
     padding: 10px 30px;
-    background-color: #1abc9c;
     border: none;
+    margin: 10px 0 0;
+    background-color: #1abc9c;
     border-radius: 5px;
     color: white;
     font-size: 14px;
