--- a/assets/styles/scss/abstracts/_variables.scss
+++ b/assets/styles/scss/abstracts/_variables.scss
@@ -181,7 +181,7 @@ $radial-gradient--foreground: radial-gradient(#003, #000);
 
 // -  <<----------<< Background-Color >>---------->>
 
-$background-color--photo-text: hsla(0, 0, 0, 0.4);
+$background-color--photo-text: hsla(0, 0%, 100%, 0.4);
 
 // -  <<----------<< Temporary >>---------->>
 
