--- a/assets/styles/scss/abstracts/mixins/_containers.scss
+++ b/assets/styles/scss/abstracts/mixins/_containers.scss
@@ -110,12 +110,12 @@
 
   // #  Regular Fontawesome Icons
   @if $type == fas {
-    margin: 0 ($width / 2) 0 0;
+    margin-right: $whitespace--xs;
     font-size: $width;
   }
   // #  Brand Fontawesome Icons
   @else if $type == fab {
-    margin: 0 ($width / 2) 0 0;
+    margin-right: $whitespace--xs;
     font-size: $width;
   }
 }
