style-main: css styling v8

--- a/assets/styles/scss/abstracts/mixins/_containers.scss
+++ b/assets/styles/scss/abstracts/mixins/_containers.scss
@@ -115,7 +115,7 @@
   }
   // #  Brand Fontawesome Icons
   @else if $type == fab {
-    margin-right: $whitespace--xs;
+    margin: 0;
     font-size: $width;
   }
 }
