--- a/assets/styles/css/main.css
+++ b/assets/styles/css/main.css
@@ -390,7 +390,7 @@ li {
 -  Inline Text Semantics
 \* -------------------------------------------------------------------------- */
 a {
-  padding: 0.25rem 0;
+  padding: 0.25rem;
   color: var(--primary-color);
   font-family: monospace;
   font-size: 1.25rem;
@@ -429,8 +429,13 @@ svg {
 .fab {
   width: 2.44141rem;
   height: auto;
-  margin-right: 0.5rem;
+  margin: 0;
   font-size: 2.44141rem;
+}
+
+.fa-youtube {
+  fill: green;
+  color: red;
 }
 
 /* -------------------------------------------------------------------------- *\
@@ -698,6 +703,9 @@ ul.menu-left.collapse {
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   background-color: seagreen;
 }
 
@@ -962,8 +970,8 @@ input:checked + .slider::before {
   max-height: 40vh;
   margin: 1.5rem 0;
   fill: var(--primary-color);
-  -webkit-filter: brightness(0.8) contrast(1.2);
-          filter: brightness(0.8) contrast(1.2);
+  -webkit-filter: brightness(0.8) contrast(1.1);
+          filter: brightness(0.8) contrast(1.1);
 }
 
 .hero__subject {
@@ -974,8 +982,8 @@ input:checked + .slider::before {
 
 .hero__title {
   color: var(--secondary-color);
-  -webkit-filter: brightness(0.5) contrast(1.2);
-          filter: brightness(0.5) contrast(1.2);
+  -webkit-filter: brightness(0.6) contrast(1.2);
+          filter: brightness(0.6) contrast(1.2);
   font-family: monospace;
   font-size: 1.95312rem;
   font-weight: 600;
