--- a/assets/styles/css/main.css
+++ b/assets/styles/css/main.css
@@ -224,11 +224,17 @@ body {
   min-width: calc(320px - 1.5rem);
   max-width: 1920px;
   margin: 0 auto;
-  background-color: #253443;
+  background-color: var(--background-color);
   color: var(--foreground-color);
   font-family: "Roboto", sans-serif;
   font-weight: 300;
   line-height: normal;
+}
+
+@media (min-width: 640px) {
+  body {
+    background-color: black;
+  }
 }
 
 /* -------------------------------------------------------------------------- *\
@@ -292,6 +298,7 @@ h2 + p::first-letter {
 }
 
 h3 {
+  display: block;
   padding: 0.5rem 0;
   color: var(--secondary-color);
   font-family: "Montserrat", sans-serif;
@@ -411,6 +418,7 @@ a:hover {
 svg {
   width: 100%;
   height: auto;
+  margin: 0 auto;
   color: var(--foreground-color);
   fill: var(--foreground-color);
   -o-object-fit: cover;
@@ -422,6 +430,7 @@ svg {
 .fas {
   width: 1.25rem;
   height: auto;
+  margin: 0 auto;
   margin-right: 0.5rem;
   font-size: 1.25rem;
 }
@@ -429,6 +438,7 @@ svg {
 .fab {
   width: 2.44141rem;
   height: auto;
+  margin: 0 auto;
   margin: 0;
   font-size: 2.44141rem;
 }
@@ -463,17 +473,11 @@ svg {
 img {
   width: 100%;
   height: auto;
+  margin: 0 auto;
   -o-object-fit: cover;
      object-fit: cover;
   -o-object-position: center center;
      object-position: center center;
-}
-
-@media (prefers-color-scheme: light) {
-  img {
-    -webkit-filter: brightness(3.8) contrast(3.2);
-            filter: brightness(3.8) contrast(3.2);
-  }
 }
 
 @media (prefers-color-scheme: dark) {
@@ -1023,23 +1027,56 @@ input:checked + .slider::before {
 /* -------------------------------------------------------------------------- *\
 -  SECTION 2: Hot Items
 \* -------------------------------------------------------------------------- */
+.hot-items__container {
+  width: 100%;
+  height: auto;
+  margin: 0 auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -ms-flex-wrap: nowrap;
+      flex-wrap: nowrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
 .hot-item {
   padding: 1rem;
 }
 
 .hot-item__container {
-  position: relative;
+  width: 100%;
+  height: auto;
+  margin: 0 auto;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  width: 375px;
-  height: 667px;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -ms-flex-wrap: nowrap;
+      flex-wrap: nowrap;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  position: relative;
+  display: flex;
+  max-width: 375px;
+  height: 667px;
+  align-items: center;
+  justify-content: center;
   background-color: lavender;
 }
 
@@ -1054,10 +1091,17 @@ input:checked + .slider::before {
   background-color: rgba(0, 0, 0, 0.85);
 }
 
+.hot-item__container:hover .hot-item__title {
+  position: absolute;
+  z-index: 0;
+  top: -30%;
+}
+
 .hot-item__title {
   position: absolute;
-  top: 50px;
-  left: 20px;
+  z-index: 1;
+  top: 1.5rem;
+  left: 1.5rem;
   padding: 0;
   margin: 0;
   background-color: thistle;
@@ -1065,6 +1109,10 @@ input:checked + .slider::before {
   font-size: 60px;
   font-weight: 100;
   line-height: 1;
+  -webkit-transition: 0.25s;
+  transition: 0.25s;
+  -webkit-transition-timing-function: ease;
+          transition-timing-function: ease;
 }
 
 .hot-item__visual {
@@ -1072,11 +1120,13 @@ input:checked + .slider::before {
   background-color: blueviolet;
   -webkit-transition: 0.25s;
   transition: 0.25s;
+  -webkit-transition-timing-function: ease;
+          transition-timing-function: ease;
 }
 
 .hot-item__caption {
   position: absolute;
-  bottom: -33%;
+  bottom: -30%;
   left: 0;
   width: 100%;
   padding: 30px;
